<resources>
    <string name="app_name">KoreanFoodReview</string>
    <string name="tvName">Name of Dish: </string>
    <string name="etName">Enter Dish Name Here</string>
    <string name="tvDesc">Description: </string>
    <string name="etDesc">Enter description here</string>
    <string name="tvLocation">Location: </string>
    <string name="etLocation">Enter location here</string>
    <string name="star">Stars</string>
    <string name="ins">Insert</string>
    <string name="SL">Show List</string>
    <string name="ID">Name ID</string>
    <string name="upd">Update</string>
    <string name="del">Delete</string>
    <string name="can">Cancel</string>
    <string name="star1">1</string>
    <string name="star2">2</string>
    <string name="star3">3</string>
    <string name="star4">4</string>
    <string name="star5">5</string>
    <string name="back">Add Another Dish</string>
    <string name="Sall">Show All Dishes</string>
    <string name="S5S">Show All Dishes With 5 Stars</string>
</resources>